--- a/domobil/rystech.htm
+++ b/domobil/rystech.htm
@@ -9,7 +9,7 @@
 
 <CENTER>
 <H3>
-Pogl\\u0105dowe rysunki techniczne</H3></CENTER>
+Poglądowe rysunki techniczne</H3></CENTER>
 <IMG SRC="t31.gif" HEIGHT=332 WIDTH=559> <IMG SRC="t32.gif" HEIGHT=223 WIDTH=568> <IMG SRC="t33.gif" HEIGHT=300 WIDTH=546> <IMG SRC="t34.gif" HEIGHT=203 WIDTH=562>
 </BODY>
 </HTML>
